<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/private_greeting_container"
            style="@style/DefaultAppTextView"
            android:text="@string/private_greeting_message"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/private_text_container"
            style="@style/DefaultAppTextView"
            android:gravity="fill_horizontal"
            android:text="@string/private_text_message"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/private_greeting_container"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/exit_button"
            style="@style/DefaultAppButton"
            android:text="@string/action_exit_from_app"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/private_text_container"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/forget_user_button"
            style="@style/DefaultAppButton"
            android:text="@string/action_forget_user"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exit_button"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
